2002-11-05  Elena Zannoni  <ezannoni@redhat.com>

        * Makefile.in (event-loop.o): Remove dependency on interps.h.
        * event-loop.c: Remove include of interps.h.

2002-11-04  Elena Zannoni  <ezannoni@redhat.com>

	* interps.h (clear_interpreter_hooks): Add 'extern' keyword.

2002-11-04  Elena Zannoni  <ezannoni@redhat.com>

	* cli/cli-interp.c (_initialize_cli_interp): Call
	gdb_interpreter_new and gdb_interpreter_add.
	* top.c (gdb_init): Call gdb_interpreter_lookup.
	(gdb_init): Call gdb_interpreter_set.
	* interps.c (gdb_interpreter_new): Renamed from
	gdb_new_interpreter.
	(gdb_interpreter_add): Renamed from gdb_add_interpreter.
	(gdb_interpreter_set): Renamed from gdb_set_interpreter.
	(gdb_interpreter_lookup): Renamed from gdb_lookup_interpreter.
	(gdb_interpreter_current): Renamed from gdb_current_interpreter.
	Update all callers.
	* interps.h: Ditto.
	

2002-11-04  Elena Zannoni  <ezannoni@redhat.com>

	* interps.h (gdb_interpreter_is_quiet_p): Rename from
	gdb_interpreter_is_quiet.
	* cli/cli-interp.c (cli_interpreter_display_prompt_p): Call
	gdb_interpreter_is_quiet_p.
	* interps.c (gdb_interpreter_is_quiet_p): Rename from
	gdb_interpreter_is_quiet.
	(gdb_set_interpreter): Call gdb_interpreter_is_quiet_p.

2002-11-04  Elena Zannoni  <ezannoni@redhat.com>

	* event-top.c (display_gdb_prompt): Use
	gdb_interpreter_display_prompt_p.
	* cli/cli-interp.c (cli_interpreter_display_prompt_p): Rename from
	cli_interpreter_display_prompt and rewrite.
	(_initialize_cli_interp): New proc name is
	cli_interpreter_display_prompt_p.
	* interps.c (gdb_new_interpreter): Initialize prompt_proc_p
	instead of prompt_proc.
	(gdb_interpreter_display_prompt_p): Rewrite as a predicate.
	(gdb_interpreter_is_quiet_p): Rename from gdb_interpreter_is_quiet.
	(gdb_set_interpreter): Call gdb_interpreter_is_quiet_p.

	* interps.h (interp_prompt_ftype): Update typedef.
	(struct gdb_interpreter_procs): Rename prompt_proc to
	prompt_proc_p.